# prompt-forge

./: .env.example  .gitignore  .gitmodules  README.md  pnpm-lock.yaml  railway.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/api_keys/: routes.py  schemas.py  service.py
apps/api/app/audit/: logger.py  routes.py
apps/api/app/auth/: api_key_deps.py  deps.py  oidc.py  routes.py  schemas.py  security.py
apps/api/app/db/: base.py  models.py
apps/api/app/embed/: routes.py  schemas.py
apps/api/app/ingestion/: crawler.py  extractor.py  pipeline.py  scorer.py
apps/api/app/learning/: calibrator.py  scheduler.py
apps/api/migrations/: env.py
apps/api/scripts/: run_ingestion.py
apps/api/tests/: conftest.py  test_api_key_deps.py  test_api_keys.py  test_assembler.py  test_audit.py  test_auth_routes.py  test_auto_improver.py  test_branch.py  test_calibrator.py  test_ccs.py  test_classifier.py  test_classifier_eval.py  test_constructor.py  test_crs_loader.py  test_deep_domains.py  test_discovery.py  test_embed_routes.py  test_evaluator.py  test_gemini_provider.py  test_groq_provider.py  test_ingestion.py  test_library_routes.py  test_mock_provider.py  test_model_picker.py  test_models_import.py  test_module_editor.py  test_oidc.py  test_ollama_provider.py  test_orchestrator.py  test_orchestrator_profile.py  test_pipeline_routes.py  test_profile_model.py  test_profile_routes.py  test_prompt_library_model.py  test_registry_loader.py  test_router.py  test_router_factory.py  test_security.py  test_session.py  test_workspace.py
(+56 files in other folders)
