[project]
name = "promptforge-api"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pyjwt>=2.9",
    "argon2-cffi>=23.1",
    "groq>=0.11",
    "python-multipart>=0.0.9",
    "email-validator>=2.3.0",
    "redis>=8.0.0",
    "google-genai>=2.8.0",
    "apscheduler>=3.11.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.6",
    "fakeredis>=2.36.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "live: requires real API keys; skipped in CI (deselect with -m 'not live')",
]
